<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahi.tripsapp.UserHomeActivity">

    <Button
        android:text="@string/signOut_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signOut"
        android:layout_marginBottom="158dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/profile_button"
        android:layout_alignStart="@+id/profile_button" />

    <Button
        android:text="@string/trips_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trips_button"
        android:layout_above="@+id/signOut"
        android:layout_alignLeft="@+id/signOut"
        android:layout_alignStart="@+id/signOut"
        android:layout_marginBottom="22dp" />

    <Button
        android:text="@string/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/profile_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friends_button"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/trips_button"
        android:layout_alignLeft="@+id/trips_button"
        android:layout_alignStart="@+id/trips_button" />
</RelativeLayout>
