<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahi.tripsapp.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="?android:attr/listChoiceBackgroundIndicator"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/profile_pic"
            android:layout_weight="0.89" />

        <Button
            android:text="Change Profile Picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/change_pic"
            android:textAllCaps="false"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:textAlignment="center"
            android:layout_gravity="center_vertical|center_horizontal" />

        <TextView
            android:text="@string/firstname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstname_label"
            android:textStyle="normal|bold"
            android:textAllCaps="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstname_text"
            android:hint="Enter First name here" />

        <TextView
            android:text="@string/lastname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastname_label"
            android:textStyle="normal|bold"
            android:textAllCaps="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastname_text"
            android:hint="Enter Last name here" />

        <TextView
            android:text="@string/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_label"
            android:textStyle="normal|bold"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_text"
            android:layout_weight="0.07"
            android:textSize="18sp"
            android:textAlignment="textStart" />

        <TextView
            android:text="@string/gender_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender_label"
            android:textStyle="normal|bold"
            android:textAllCaps="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/gender_text"
            android:hint="Enter Gender here" />

        <Button
            android:text="Update Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/update_profile"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>
